# VoxPrep

./: .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/agents/: graph.py  state.py
backend/app/agents/nodes/: coach.py  evaluator.py  interviewer.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  router.py  sessions.py
backend/app/api/v1/: router.py  sessions.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  enums.py  exceptions.py  security.py
backend/app/db/: __init__.py  engine.py
backend/app/models/: __init__.py  answer.py  base.py  feedback.py  question.py  score.py  session.py  session_event.py  user.py
backend/app/observability/: __init__.py  logging.py  metrics.py  tracing.py
backend/app/repositories/: answer_repository.py  feedback_repository.py  session_repository.py  user_repository.py
backend/app/schemas/: answer.py  feedback.py  question.py  score.py  session.py  user.py
backend/app/services/: report_service.py  session_service.py  stt_service.py  tts_service.py
backend/app/workers/: celery_app.py  livekit_agent.py
backend/migrations/: env.py
frontend/: .gitignore
