[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxprep-backend"
version = "0.3.0"
description = "AI Voice Interview Coach — Backend API"
requires-python = ">=3.12"

dependencies = [
    # ── Web framework ─────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "starlette>=0.41.0",
    "python-multipart>=0.0.20",

    # ── Database ──────────────────────────────────────────────────
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",                        # SQLAlchemy async driver
    "psycopg[async]>=3.1",                    # psycopg3 — AsyncPostgresSaver requires this
    "langgraph-checkpoint-postgres>=2.0.0",   # AsyncPostgresSaver implementation
    "alembic>=1.14.0",

    # ── Validation / Settings ─────────────────────────────────────
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.3.0",

    # ── Auth ──────────────────────────────────────────────────────
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",                          # pinned — passlib 1.7.4 incompatible with bcrypt >= 4.1

    # ── AI / LLM ─────────────────────────────────────────────────
    "groq>=0.13.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.53",
    "langgraph-checkpoint>=2.1.0",

    # ── Vector store ──────────────────────────────────────────────
    "qdrant-client>=1.18.0",

    # ── Cache / Queue ─────────────────────────────────────────────
    "redis>=5.2.0",
    "celery>=5.4.0",

    # ── HTTP client ───────────────────────────────────────────────
    "httpx>=0.28.0",

    # ── Observability ─────────────────────────────────────────────
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",

    # ── Serialization ─────────────────────────────────────────────
    "orjson>=3.11.0",

    # ── LiveKit (post-MVP) ────────────────────────────────────────
    "livekit>=0.19.0",
    "livekit-api>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "coverage>=7.14.0",
    "types-protobuf>=4.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle + pyflakes + isort